# madr

./: .gitignore  pyproject.toml  sonar.properties
.github/workflows/: build.yaml  pipeline.yaml
madr/: app.py  models.py  security.py  settings.py  utils.py
madr/routers/: auth.py  contas.py  livros.py  romancistas.py
madr/schemas/: contas.py  filters.py  livros.py  romancistas.py
migrations/versions/: 74da93a455aa_create_livros_table.py  bf545f3ee332_create_contas_table.py  c3dfae0adecc_create_romancistas_table.py
tests/: conftest.py  test_auth.py  test_contas.py  test_livros.py  test_romancistas.py  test_security.py  test_utils.py
