[tool.poetry]
name = "madr"
version = "0.1.0"
description = ""
authors = ["Eduardo Gomes <edu_merckx@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
